5.1.0 (31-07-2019)
- Refactor: Upgrade dependency of fenixedu-academic-core (changed domain relations from ExecutionSemester to ExecutionInterval)

5.0.0 (29-07-2019)
- Refactor: Changes in 1A1V student registration to accomodate fiscal address edition. Also improve addresses edition.
- Refactor: Remove fiscal information from personal data edition. Fiscal information edition is in own page.

4.2.0 (25-07-2019)
- Refactor: Curriculum aggregators now must have an explicit version for each semester
- Refactor: Replaced usages of ExecutionSemester by ExecutionInterval   

4.1.0 (23-07-2019)
- Refactor: Migrated second nationality to Person
- Refactor: Update dependencies

4.0.7 (08-07-2019)
- Bug Fix: added missing label
- Improvement: Added new column at registration history report: Enrolment Years Including Precedent Registrations (#UL-FA-473)

4.0.6 (03-07-2019)
- Refactor: moved registration history report services to academic-extensions

4.0.5 (27-06-2019)
- Refactor: moved RegistrationDataBean to academic-extensions

4.0.4 (27-06-2019)
- Bug Fix: regime description in registration history report should also check if curricular course is optional  

4.0.3 (26-06-2019)
- Refactor: upgrade dependencies

4.0.2 (19-06-2019)
- Bug Fix: added missing labels

4.0.1 (19-06-2019)
- Bug Fix: avoided NPE when collecting open enrolment periods for student 

4.0.0 (18-06-2019)
- Refactor: Moved core domain entities to academic-extensions module

3.0.1 (17-06-2019)
- Bug Fix: fix enrolment period test in StudentCurricularPlanEnrolmentManager 

3.0.0 (14-06-2019)
- Refactor: Renamed core domain entities package to academic

2.18.0 (11-06-2019)
- Refactor: Moved domain entities to academic-extensions module

2.17.0 (07-06-2019)
- Refactor: Moved configuration properties regarding quality mode to academic-extensions module

2.16.1 (04-06-2019)
- Improvement: Handle all exceptions when trying to create a new service request.