@@ -226,13 +226,6 @@ relation PersonUlPerson {
 	.org.fenixedu.academic.domain.Person playsRole person;
 }
 
-relation PersonUlSecondNationality {
-	PersonUlisboaSpecifications playsRole personUlisboaSpecifications {
-		multiplicity *;
-	}
-    .org.fenixedu.academic.domain.Country playsRole secondNationality;
-}
-
 relation PersonUlFirstOptionInstitution {
 	PersonUlisboaSpecifications playsRole personUlisboaSpecifications {
 		multiplicity *;
