@@ -1,3 +1,5 @@
+- Refactor: Removed code related to PersonUL <-> SecondNationality
+
 5.1.0 (31-07-2019)
 - Refactor: Upgrade dependency of fenixedu-academic-core (changed domain relations from ExecutionSemester to ExecutionInterval)
 
